infra/keycloak/staging/patch-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  template:
    spec:
      volumes:
        - name: realm
          secret:
            secretName: keycloak-realm
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
      - name: keycloak
        volumeMounts:
        - name: realm
          mountPath: /opt/jboss/realm
          readOnly: true
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
      - name: keycloak
